# pypetmux

./: .gitignore  Cargo.toml  Makefile  README.md  mkdocs.yml  pyproject.toml  requirements-docs.txt
.github/workflows/: CI.yml  Pages.yml
docs/: index.md  installation.md
docs/api/: pane.md  server.md  session.md  window.md
python/pypetmux/: __init__.py  __init__.pyi
src/: lib.rs  pane.rs  server.rs  session.rs  window.rs
src/subclasses/: mod.rs  prev_cmd.rs
