[package]
name = "pypetmux"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pypetmux"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.27.0", features = ["abi3-py310", "extension-module", "full"] }
pyo3-stub-gen = "0.20.0"

[features]
extension-module = ["pyo3/extension-module"]

